--- a/templates/500.html
+++ b/templates/500.html
@@ -43,7 +43,7 @@
                     <div class="skin-part">
                         <div id="tree-wrap">
                             <!-- Profile -->
-                            <div class="profile"> <img alt="" class="" src="img/yeti.svg">
+                            <div class="profile"> <img alt="" class="" src="{% static "img/yeti.svg" %}">
                                 <h3>SmileyLab <small>ADMIN</small></h3> </div>
                             <!-- End of Profile -->
                             <!-- Menu sidebar begin-->
@@ -97,7 +97,7 @@
                                         </a> </li>
                                             <li> <a href="tab.html" title="Tab & Accordion">Tab & Accordion</a> </li>
                                             <li> <a href="typography.html" title="Typography">
-                                                
+
                                                 Typography
                                             </a> </li>
                                             <li> <a href="panel.html" title="panel">Panel</a> </li>
@@ -332,7 +332,7 @@
                                             <div class="ball"></div>
                                         </div>
                                         <p> We could not find the page you were looking for. Meanwhile, you may <a class="error-link" href="index-2.html">return to dashboard</a> or try using the search form. </p>
-                                 
+
                                     </div>
                                     <!-- /.error-content -->
                                 </div>
