--- a/templates/button.html
+++ b/templates/button.html
@@ -44,7 +44,7 @@
                     <div class="skin-part">
                         <div id="tree-wrap">
                             <!-- Profile -->
-                            <div class="profile"> <img alt="" class="" src="img/yeti.svg">
+                            <div class="profile"> <img alt="" class="" src="{% static "img/yeti.svg" %}">
                                 <h3>SmileyLab <small>ADMIN</small></h3> </div>
                             <!-- End of Profile -->
                             <!-- Menu sidebar begin-->
