--- a/templates/base.html
+++ b/templates/base.html
@@ -211,5 +211,52 @@
 
       });
   </script>
+
+  <script type='text/javascript' src="{% static "js/gallery/jquery.easing.min.js" %}"></script>
+  <script type='text/javascript' src="{% static "js/gallery/jquery.mixitup.min.js" %}"></script>
+  <script type='text/javascript' src="{% static "js/gallery/jquery.swipebox.js" %}"></script>
+
+  <script type="text/javascript">
+      $(function () {
+          //lightbox
+          $('.swipebox').swipebox();
+          //filtered portfolio
+          var filterList = {
+              init: function () {
+                  // MixItUp plugin
+                  // http://mixitup.io
+                  $('#portfoliolist').mixitup({
+                      targetSelector: '.portfolio'
+                      , filterSelector: '.filter'
+                      , effects: ['fade']
+                      , easing: 'snap'
+                      , // call the hover effect
+                      onMixEnd: filterList.hoverEffect()
+                  });
+              }
+              , hoverEffect: function () {
+                  // Simple parallax effect
+                  $('#portfoliolist .portfolio').hover(function () {
+                      $(this).find('.label').stop().animate({
+                          bottom: 0
+                      }, 200, 'easeOutQuad');
+                      $(this).find('img').stop().animate({
+                          top: -30
+                      }, 500, 'easeOutQuad');
+                  }, function () {
+                      $(this).find('.label').stop().animate({
+                          bottom: -40
+                      }, 200, 'easeInQuad');
+                      $(this).find('img').stop().animate({
+                          top: 0
+                      }, 300, 'easeOutQuad');
+                  });
+              }
+          };
+          // Run the show!
+          filterList.init();
+      });
+  </script>
+
 </body>
 </html>
