--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,34 +1,11 @@
-<!doctype html>
-<html class="no-js" lang="en">
+{% extends "base.html" %}
+{% load staticfiles %}
 
+{% block title %}
+Home
+{% endblock title %}
 
-<!-- Mirrored from ndesaintheme.com/SmileyLab/gallery.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 Jun 2017 09:08:50 GMT -->
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SmileyLab Gallery</title>
-    <link rel="stylesheet" href="css/foundation.css" />
-    <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="css/palette.css">
-    <link rel="stylesheet" href="sass/css/dashboard.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/dripicon.css">
-    <link rel="stylesheet" href="css/typicons.css" />
-    <link rel="stylesheet" href="css/font-awesome.css" />
-    <link rel="stylesheet" href="css/themify-icons.css" />
-    <link rel="stylesheet" href="css/Montserrat-Hairline.css" />
-    <link rel="stylesheet" href="sass/css/theme.css">
-    <link rel="stylesheet" href="css/portfolio.css">
-    <link rel="stylesheet" href="js/gallery/swipebox.css" />
-    <!-- pace loader -->
-    <script src="js/pace/pace.js"></script>
-    <link href="js/pace/themes/orange/pace-theme-flash.css" rel="stylesheet" />
-    <link rel="stylesheet" href="js/slicknav/slicknav.css" />
-    <script src="js/vendor/modernizr.js"></script>
-</head>
-
-<body>
-    <!-- preloader -->
+{% block content %}
     <div id="preloader">
         <div id="status">&nbsp;</div>
     </div>
@@ -99,7 +76,7 @@
                                         </a> </li>
                                             <li> <a href="tab.html" title="Tab & Accordion">Tab & Accordion</a> </li>
                                             <li> <a href="typography.html" title="Typography">
-                                                
+
                                                 Typography
                                             </a> </li>
                                             <li> <a href="panel.html" title="panel">Panel</a> </li>
@@ -510,75 +487,4 @@ Like this one! Keep going!<small>2h</small></a></li>
             <!-- end paper bg -->
         </div>
     </div>
-    <!-- end of off-canvas-wrap -->
-    <!-- end of inner-wrap -->
-    <!-- main javascript library -->
-
-    <script type='text/javascript' src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/waypoints.min.js"></script>
-    <script type='text/javascript' src='js/preloader-script.js'></script>
-    <!-- foundation javascript -->
-    <script type='text/javascript' src="js/foundation.min.js"></script>
-    <script type='text/javascript' src="js/foundation/foundation.dropdown.js"></script>
-    <!-- main edumix javascript -->
-    <script type='text/javascript' src='js/slimscroll/jquery.slimscroll.js'></script>
-    <script type='text/javascript' src='js/slicknav/jquery.slicknav.js'></script>
-    <script type='text/javascript' src='js/sliding-menu.js'></script>
-    <script type='text/javascript' src='js/scriptbreaker-multiple-accordion-1.js'></script>
-    <script type="text/javascript" src="js/number/jquery.counterup.min.js"></script>
-    <script type="text/javascript" src="js/circle-progress/jquery.circliful.js"></script>
-    <script type='text/javascript' src='js/app.js'></script>
-    <!-- additional javascript -->
-    <!-- portfolio filtered -->
-    <script type="text/javascript" src="js/gallery/jquery.easing.min.js"></script>
-    <script type="text/javascript" src="js/gallery/jquery.mixitup.min.js"></script>
-    <script type="text/javascript" src="js/gallery/jquery.swipebox.js"></script>
-    <script type="text/javascript">
-        $(function () {
-            //lightbox 
-            $('.swipebox').swipebox();
-            //filtered portfolio
-            var filterList = {
-                init: function () {
-                    // MixItUp plugin
-                    // http://mixitup.io
-                    $('#portfoliolist').mixitup({
-                        targetSelector: '.portfolio'
-                        , filterSelector: '.filter'
-                        , effects: ['fade']
-                        , easing: 'snap'
-                        , // call the hover effect
-                        onMixEnd: filterList.hoverEffect()
-                    });
-                }
-                , hoverEffect: function () {
-                    // Simple parallax effect
-                    $('#portfoliolist .portfolio').hover(function () {
-                        $(this).find('.label').stop().animate({
-                            bottom: 0
-                        }, 200, 'easeOutQuad');
-                        $(this).find('img').stop().animate({
-                            top: -30
-                        }, 500, 'easeOutQuad');
-                    }, function () {
-                        $(this).find('.label').stop().animate({
-                            bottom: -40
-                        }, 200, 'easeInQuad');
-                        $(this).find('img').stop().animate({
-                            top: 0
-                        }, 300, 'easeOutQuad');
-                    });
-                }
-            };
-            // Run the show!
-            filterList.init();
-        });
-    </script>
-    <script>
-        $(document).foundation();
-    </script>
-</body>
-
-
-<!-- Mirrored from ndesaintheme.com/SmileyLab/gallery.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 Jun 2017 09:09:09 GMT -->
-</html>
+    {% endblock content %}
