--- a/templates/master.html
+++ b/templates/master.html
@@ -1,32 +1,11 @@
-<!doctype html>
-<html class="no-js" lang="en">
+{% extends "base.html" %}
+{% load staticfiles %}
 
+{% block title %}
+Home
+{% endblock title %}
 
-<!-- Mirrored from ndesaintheme.com/SmileyLab/master.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 Jun 2017 09:09:14 GMT -->
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SmileyLab Master</title>
-    <link rel="stylesheet" href="css/foundation.css" />
-    <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="css/palette.css">
-    <link rel="stylesheet" href="sass/css/dashboard.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/dripicon.css">
-    <link rel="stylesheet" href="css/typicons.css" />
-    <link rel="stylesheet" href="css/font-awesome.css" />
-    <link rel="stylesheet" href="css/themify-icons.css" />
-    <link rel="stylesheet" href="css/Montserrat-Hairline.css" />
-    <link rel="stylesheet" href="sass/css/theme.css">
-    <!-- pace loader -->
-    <script src="js/pace/pace.js"></script>
-    <link href="js/pace/themes/orange/pace-theme-flash.css" rel="stylesheet" />
-    <link rel="stylesheet" href="js/slicknav/slicknav.css" />
-    <script src="js/vendor/modernizr.js"></script>
-</head>
-
-<body>
-    <!-- preloader -->
+{% block content %}
     <div id="preloader">
         <div id="status">&nbsp;</div>
     </div>
@@ -97,7 +76,7 @@
                                         </a> </li>
                                             <li> <a href="tab.html" title="Tab & Accordion">Tab & Accordion</a> </li>
                                             <li> <a href="typography.html" title="Typography">
-                                                
+
                                                 Typography
                                             </a> </li>
                                             <li> <a href="panel.html" title="panel">Panel</a> </li>
@@ -344,7 +323,7 @@
                                             <p>Accordions are elements that help you organize and navigate multiple documents in a single container. They can be used for switching between items in the container..</p>
                                         </div>
                                         <div class="large-9 columns">
-                             
+
                                         </div>
                                     </div>
                                     <!-- end tooltip -->
@@ -352,7 +331,7 @@
                                 <!-- /.box-body -->
                             </div>
                             <!--end of ACCORDION ITEM-->
-                           
+
                         </div>
                         <!--End of Right Side-->
                     </div>
@@ -391,33 +370,4 @@ Like this one! Keep going!<small>2h</small></a></li>
             <!-- end paper bg -->
         </div>
     </div>
-    <!-- end of off-canvas-wrap -->
-    <!-- end of inner-wrap -->
-    <!-- main javascript library -->
-    <script type='text/javascript' src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/waypoints.min.js"></script>
-    <script type='text/javascript' src='js/preloader-script.js'></script>
-    <!-- foundation javascript -->
-    <script src="js/what-input.js"></script>
-    <script type='text/javascript' src="js/foundation.js"></script>
-    <!-- main edumix javascript -->
-    <script type='text/javascript' src='js/slimscroll/jquery.slimscroll.js'></script>
-    <script type='text/javascript' src='js/slicknav/jquery.slicknav.js'></script>
-    <script type='text/javascript' src='js/sliding-menu.js'></script>
-    <script type='text/javascript' src='js/scriptbreaker-multiple-accordion-1.js'></script>
-    <script type="text/javascript" src="js/number/jquery.counterup.min.js"></script>
-    <script type="text/javascript" src="js/circle-progress/jquery.circliful.js"></script>
-    <script type='text/javascript' src='js/app.js'></script>
-    <!-- additional javascript -->
-    <script type='text/javascript' src="js/number-progress-bar/jquery.velocity.min.js"></script>
-    <script type='text/javascript' src="js/number-progress-bar/number-pb.js"></script>
-    <script type='text/javascript' src="js/loader/loader.js"></script>
-    <script type='text/javascript' src="js/loader/demo.js"></script>
-    <script>
-        $(document).foundation();
-    </script>
-</body>
-
-
-<!-- Mirrored from ndesaintheme.com/SmileyLab/master.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 Jun 2017 09:09:14 GMT -->
-</html>
+{% endblock content %}
