--- a/templates/job.html
+++ b/templates/job.html
@@ -1,30 +1,139 @@
 {% extends "base.html" %} {% load staticfiles %} {% block title %} Home {% endblock title %} {% block content %}
 <div class="row" style="margin-top:-20px">
   <div class="large-12 columns">
-
     <div class="row">
       <div class="large-12 columns">
-        <!--New User-->
         <div class="box palette-Yellow-800 bg">
           <div class="box-header  palette-Yellow-800 bg">
-            <!-- tools box -->
-            <div class="pull-right text-white box-tools"> <span class="text-white box-btn"><i class="circle-nest-medium ti-user"></i>
-                  </span>&nbsp;&nbsp;&nbsp; </div>
-            <h3 class="box-title">
-                    <span class="text-white">&nbsp;&nbsp;&nbsp;NEW USER</span>
-                  </h3> </div>
-          <!-- /.box-header -->
-          <div class="box-body no-pad" style="display: block;">
-            <div class="events-nest ">
-              <div class="wrap-no-pad text-white">
-                <h1 class="text-white"><b class="counter-up-fast">390</b></h1> <span>Users</span>
-                <p>65%</p>
-                <br> </div>
+            <h3 class="box-title"><span class="text-white">&nbsp;&nbsp;&nbsp;NEW JOB</span></h3>
+            <div class="pull-right text-white box-tools">
+              <span class="text-white box-btn"><i class="circle-nest-medium ti-notepad"></i>
+              </span> &nbsp;&nbsp;&nbsp;
+            </div>
+            <div class="medium-9 columns ">
+              <div>
+                <form class="form-inline">
+                  <br>
+                  <br>
+
+                  <div class="form-group">
+                    <label class="sr-only" name="brand">Brand Name:</label>
+                    <select class="form-control">
+                          <option>1</option>
+                    </select>
+                  </div>
+
+
+
+                  <div class="form-group">
+                    <label class="sr-only" name="brand">Division Name:</label>
+                    <select multiple class="form-control">
+                      <option>1</option>
+                      <option>2</option>
+                    </select>
+                  </div>
+
+                  <div class="form-group">
+                    <label class="sr-only">Job Name:</label>
+                    <input type="text" class="form-control" name="jobsName">
+                  </div>
+
+                  <div class="form-group">
+                    <label class="sr-only" name="active">Active:</label>
+                    <select class="form-control">
+                          <option>Active</option>
+                          <option>Inactive</option>
+                    </select>
+                  </div>
+
+                  <div class="form-group">
+                    <table class="table table-striped">
+                      <thead>
+                        <tr>
+                          <th>Color List</th>
+                          <th>Brand Color</th>
+                          <th>Patch Tolerance</th>
+                          <th>
+                            <button type="button" class="btn btn-default" onclick="fieldAdd();"><span>Add</span></button>
+                            <button type="button" class="btn btn-default" onclick="fieldRemove();"><span>Remove</span></button>
+                          </th>
+
+                        </tr>
+                      </thead>
+                      <script>
+                        var count=1;
+                      </script>
+                      <script>
+                        function fieldAdd() {
+                          count+=1;
+                          $('#addTable').append(
+                            "<tr><td><input type='text' class='form-control' name='colorList"+count+"'></td><td><input type='text' class='form-control' name='brandColor"+count+"'></td><td><input type='text' class='form-control' name='patchTolerance"+count+"'></td><td></tr>"
+                          )
+                        }
+                      </script>
+                      <script>
+                      function fieldRemove() {
+                        count-=1;
+                        console.log("here");
+                        $('#addTable tr').last().remove()
+                        return false;
+                      }
+
+                      </script>
+
+                      <tbody id="addTable">
+                        <tr>
+                          <td><input type="text" class="form-control" name="colorList1"></td>
+                          <td><input type="text" class="form-control" name="brandColor1"></td>
+                          <td><input type="text" class="form-control" name="patchTolerance1"></td>
+                          <td></td>
+                        </tr>
+
+                      </tbody>
+                    </table>
+
+                    <label class="sr-only" name="active">Active:</label>
+                    <select class="form-control">
+                          <option>Active</option>
+                          <option>Inactive</option>
+                    </select>
+                  </div>
+
+
+
+                  <!--
+                  <div class="form-group">
+                    <label class="sr-only" for="email">Email address:</label>
+                    <input type="email" class="form-control" id="email">
+                  </div>
+                  <div class="form-group">
+                    <label class="sr-only" for="pwd">Password:</label>
+                    <input type="password" class="form-control" id="pwd">
+                  </div>
+                  <div class="form-group">
+                    <label class="sr-only" for="sel1">Select list (select one):</label>
+                    <select class="form-control" id="sel1">
+                      <option>1</option>
+                      <option>2</option>
+                      </select>
+                  </div>
+
+
+                  <div class="checkbox">
+                    <label><input type="checkbox"> Remember me</label>
+                  </div> -->
+
+
+
+                  <button type="submit" class="btn btn-default">Create Job</button>
+
+                  <br>
+                  <br>
+                </form>
+              </div>
             </div>
           </div>
-          <!-- /.box-body -->
         </div>
-        <!--end of New User-->
       </div>
     </div>
   </div>
