--- a/templates/job.html
+++ b/templates/job.html
@@ -18,7 +18,7 @@
 
                   <div class="form-group">
                     <label class="sr-only" name="brand">Brand Name:</label>
-                    <select class="form-control">
+                    <select class="form-control" required>
                           <option>1</option>
                     </select>
                   </div>
@@ -27,7 +27,7 @@
 
                   <div class="form-group">
                     <label class="sr-only" name="brand">Division Name:</label>
-                    <select multiple class="form-control">
+                    <select multiple class="form-control" required>
                       <option>1</option>
                       <option>2</option>
                     </select>
@@ -35,12 +35,12 @@
 
                   <div class="form-group">
                     <label class="sr-only">Job Name:</label>
-                    <input type="text" class="form-control" name="jobsName">
+                    <input type="text" class="form-control" name="jobsName" required>
                   </div>
 
                   <div class="form-group">
                     <label class="sr-only" name="active">Active:</label>
-                    <select class="form-control">
+                    <select class="form-control" required>
                           <option>Active</option>
                           <option>Inactive</option>
                     </select>
@@ -83,9 +83,9 @@
 
                       <tbody id="addTable">
                         <tr>
-                          <td><input type="text" class="form-control" name="colorList1"></td>
-                          <td><input type="text" class="form-control" name="brandColor1"></td>
-                          <td><input type="text" class="form-control" name="patchTolerance1"></td>
+                          <td><input type="text" class="form-control" name="colorList1" required></td>
+                          <td><input type="text" class="form-control" name="brandColor1" required></td>
+                          <td><input type="text" class="form-control" name="patchTolerance1" required></td>
                           <td></td>
                         </tr>
 
@@ -93,7 +93,7 @@
                     </table>
 
                     <label class="sr-only" name="active">Active:</label>
-                    <select class="form-control">
+                    <select class="form-control" required>
                           <option>Active</option>
                           <option>Inactive</option>
                     </select>
