--- a/templates/division.html
+++ b/templates/division.html
@@ -12,15 +12,17 @@
             </div>
             <div class="medium-9 columns ">
               <div>
-                <form class="form-inline">
+                <form action="#" method="POST" class="form-inline">{% csrf_token %}
                   <br>
                   <br>
+                  <h4 style="color: red">{{message}}</h4>
 
                   <div class="form-group">
-                    <label class="sr-only" name="member">Member Name:</label>
-                    <select class="form-control">
-                          <option>1</option>
-                          <option>2</option>
+                    <label class="sr-only" >Member Name:</label>
+                    <select name="member" class="form-control">
+                      {%for each in members %}
+                        <option value={{each.pk}}>{{each.name}}</option>
+                      {% endfor %}
                     </select>
                   </div>
 
@@ -28,10 +30,29 @@
                     <label class="sr-only">Division Name:</label>
                     <input type="text" class="form-control" name="name" required>
                   </div>
-
                   <div class="form-group">
                     <label class="sr-only">Address:</label>
-                    <textarea class="form-control" name="address" rows="5" id="comment" required></textarea>
+                    <input type="text" class="form-control" name="address" required></input type="text">
+                  </div>
+                  <div class="form-group">
+                    <label class="sr-only">City:</label>
+                    <input type="text" class="form-control" name="city" required></input type="text">
+                  </div>
+                  <div class="form-group">
+                    <label class="sr-only">State:</label>
+                    <input type="text" class="form-control" name="state" required></input type="text">
+                  </div>
+                  <div class="form-group">
+                    <label class="sr-only">Country:</label>
+                    <select name="country" class="form-control">
+                      {%for each in countries %}
+                        <option value={{each.0}}>{{each.1}}</option>
+                      {% endfor %}
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <label class="sr-only">ZIP:</label>
+                    <input type="text" class="form-control" name="zip" required></input type="text">
                   </div>
 
                   <button type="submit" class="btn btn-default">Create Division</button>
