--- a/templates/standard.html
+++ b/templates/standard.html
@@ -12,16 +12,15 @@
             </div>
             <div class="medium-9 columns ">
               <div>
-                <form class="form-inline">
+                <form action="#" method="POST" class="form-inline">{% csrf_token %}
                   <br>
                   <br>
+                  <h4 style="color: red">{{message}}</h4>
 
                   <div class="form-group">
                     <label class="sr-only">Standard Name:</label>
                     <input type="text" class="form-control" name="standardName" required>
                   </div>
-
-
 
                   <div class="form-group">
                     <label class="sr-only">Version:</label>
@@ -34,10 +33,10 @@
                   </div>
 
                   <div class="form-group">
-                    <label class="sr-only" name="active">Active:</label>
-                    <select class="form-control" required>
-                          <option>Active</option>
-                          <option>Inactive</option>
+                    <label class="sr-only" >Active:</label>
+                    <select class="form-control" name="active" required>
+                          <option value="True">Active<option>
+                          <option value="False">Inactive<option>
                     </select>
                   </div>
 
