--- a/templates/app/role.html
+++ b/templates/app/role.html
@@ -3,8 +3,8 @@
   <div class="large-12 columns">
     <div class="row">
       <div class="large-12 columns">
-        <div class="box palette-Yellow-800 bg">
-          <div class="box-header  palette-Yellow-800 bg">
+        <div class="box palette-Grey-300 bg">
+          <div class="box-header  palette-Grey-300 bg">
             <h3 class="box-title"><span class="text-white">&nbsp;&nbsp;&nbsp;NEW ROLE</span></h3>
             <div class="pull-right text-white box-tools">
               <span class="text-white box-btn"><i class="circle-nest-medium ti-notepad"></i>
