--- a/templates/app/job.html
+++ b/templates/app/job.html
@@ -3,8 +3,8 @@
   <div class="large-12 columns">
     <div class="row">
       <div class="large-12 columns">
-        <div class="box palette-Yellow-800 bg">
-          <div class="box-header  palette-Yellow-800 bg">
+        <div class="box palette-Grey-300 bg">
+          <div class="box-header  palette-Grey-300 bg">
             <h3 class="box-title"><span class="text-white">&nbsp;&nbsp;&nbsp;NEW JOB</span></h3>
             <div class="pull-right text-white box-tools">
               <span class="text-white box-btn"><i class="circle-nest-medium ti-notepad"></i>
@@ -20,10 +20,10 @@
                     else{
                       $.get("{%url "app:divisionFromBrand" %}", { "brand": value},
                           function(divisions){
-                               console.log(divisions, divisions["divisions"].length);
+                              //  console.log(divisions, divisions["divisions"].length);
                                $('#mySelect option').remove();
                                for(var count=0; count < divisions["divisions"].length; count++){
-                                 console.log("values",divisions["divisions"][count]["id"] );
+                                //  console.log("values",divisions["divisions"][count]["id"] );
                                 $('#mySelect').append( new Option(divisions["divisions"][count]["name"],divisions["divisions"][count]["id"]) );
                                }
                               //  $('#mySelect').append( new Option(text,val) );
@@ -47,7 +47,7 @@
                       {% endfor %}
                     </select>
                   </div>
-                  
+
 
 
                   <div class="form-group">
