--- a/templates/header.html
+++ b/templates/header.html
@@ -18,7 +18,7 @@
           <div id="tree-wrap">
             <!-- Profile -->
             <div class="profile"> <img alt="" class="" src="{% static "img/yeti.svg" %}">
-              <h3>SmileyLab <small>ADMIN</small></h3>
+              <h3>SmileyLab </h3>
             </div>
             <!-- End of Profile -->
             <!-- Menu sidebar begin-->
@@ -41,7 +41,7 @@
                   </ul>
                 </li>
                 <li>
-                  <a class="tooltip-tip" href="#"> <i class="palette-Indigo-700 bg ti-layout"></i> <span>JOB<small class="side-menu-noft">New</small></span> </a>
+                  <a class="tooltip-tip" href="#"> <i class="palette-Indigo-700 bg ti-layout"></i> <span>JOB</span> </a>
                   <ul>
                     <li><a href="{% url "app:job" %}">New Job</a></li>
                     <li><a href="#">Show Jobs</a></li>
@@ -57,7 +57,7 @@
                 </li>
                 <li>
                   <a href="#" class="tooltip-tip"> <i class="intial palette-Blue-900 bg ti-write"></i> <span>Standard
-                    <small class="side-menu-noft bg-blue">hot</small></span> </a>
+                  </span> </a>
                   <ul>
                     <li><a href="{% url "app:standard" %}">New Standards</a></li>
                     <li><a href="#">Show Standards</a></li>
@@ -70,11 +70,12 @@
                 </li>
                 <li>
                   <a href="#" class="tooltip-tip">  <i class="intial palette-Teal-600 bg ti-vector"></i>
-                      <span>Trend<small class="side-menu-noft bg-blue">hot</small></span>
+                      <span>Trend</span>
                     </a>
                 </li>
                 <li>
-                  <a href="#"> <i class="intial palette-Green-700 bg ti-layers-alt"></i> <span>Analytics&nbsp;  <small class="side-menu-noft">new</small></span> </a>
+                  <a href="#"> <i class="intial palette-Green-700 bg ti-layers-alt"></i> <span>Analytics&nbsp;
+                    </a>
                 </li>
 
                 <li>
