--- a/static/sass/css/theme.css
+++ b/static/sass/css/theme.css
@@ -315,7 +315,8 @@ Master Text Color
   color: #85144b !important; }
 
 .text-white {
-  color: #ffffff !important; }
+  color: #ffffff !important;
+ }
 
 .border-green {
   border-color: #37A8AF !important; }
@@ -1136,7 +1137,7 @@ ol.breadcrumb.newcrumb {
   font-size: 12px;
   color: #666; }
 
-/* 
+/*
 Dropdown menus
 */
 .dropdown-menu > li > a {
@@ -1209,7 +1210,7 @@ Drodown in navbars
     font-weight: 100;
     color: #808CA0; }
 
-    /* 
+    /*
 Sidebar Menu
 */
     /*$font-text: 'Varela Round',
@@ -1624,7 +1625,7 @@ li.hide-min-toggle {
   font-size: 9px;
   border: 2px solid rgba(255, 255, 255, 0.1); }
 
-    /* 
+    /*
 Show up sidemenu when minimize
 */
     /*
@@ -1755,7 +1756,7 @@ ul.topnav h4 {
   .dropdown-wrap:before,
   .dropdown-wrap:after {
     display: none; } }
-/* 
+/*
         CONTENT
 */
 /*
