--- a/templates/header.html
+++ b/templates/header.html
@@ -7,21 +7,16 @@
 <!-- End of preloader -->
 <div class="off-canvas-wrapper over-flow-hidden">
   <div class="off-canvas-wrapper-inner " data-off-canvas-wrapper>
-    <!-- right sidebar wrapper -->
     <div class="inner-wrap">
-      <!-- Right sidemenu -->
       <div id="skin-select">
-        <!--      Toggle sidemenu icon button -->
-        <a id="toggle">  </a>
-        <!--      End of Toggle sidemenu icon button -->
+        <a id="toggle"></a>
         <div class="skin-part">
           <div id="tree-wrap">
-            <!-- Profile -->
-            <div class="profile"> <img alt="" class="" src="{% static "img/yeti.svg" %}">
-              <h3>SmileyLab </h3>
-            </div>
-            <!-- End of Profile -->
-            <!-- Menu sidebar begin-->
+            <a href="/">
+              <div class="profile"> <img alt="" class="" src="{% static "img/yeti.svg" %}">
+                <a href="/"><h3>SmileyLab </h3></a>
+              </div>
+            </a>
             <div class="side-bar">
               <ul id="menu-showhide" class="topnav slicknav">
                 <li>
@@ -117,7 +112,5 @@
           </div>
         </div>
       </div>
-      <!-- end of Rightsidemenu -->
       <div class="wrap-fluid" id="paper-bg">
-  <!-- Top Nav -->
-<br><br>
+  <br><br>
