--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
             <div class="events-nest ">
               <div class="wrap-no-pad text-white" >
                 <br>
-                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/jobs.png" %}" width="100px" height="100px" >
-                <h4 class="text-white"><b>JOBS/STATUS</b><br></h4>
+                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/jobs.png" %}" width="50px" height="50px" >
+                <br><h6 class="text-white" ><b>JOBS/STATUS</b></h6>
                 <br>
               </div>
             </div>
@@ -22,8 +22,8 @@
             <div class="events-nest ">
               <div class="wrap-no-pad text-white" >
                 <br>
-                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/nume_ana.png" %}" width="100px" height="100px" >
-                <h4 class="text-white"><b>Numerical Analysis</b></h4>
+                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/nume_ana.png" %}" width="50px" height="50px" >
+                <br><h6 class="text-white"><b>Numerical Analysis</b></h6>
                 <br>
               </div>
             </div>
@@ -36,8 +36,8 @@
             <div class="events-nest ">
               <div class="wrap-no-pad text-white" >
                 <br>
-                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/vis_ana.png" %}" width="100px" height="100px" >
-                <h4 class="text-white"><b>Visual Analysis</b></h4>
+                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/vis_ana.png" %}" width="50px" height="50px" >
+                <br><h6 class="text-white"><b>Visual Analysis</b></h6>
                 <br>
               </div>
             </div>
@@ -50,8 +50,8 @@
             <div class="events-nest ">
               <div class="wrap-no-pad text-white" >
                 <br>
-                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/ana.png" %}" width="100px" height="100px" >
-                <h4 class="text-white"><b>Analytics</b></b></h4>
+                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/ana.png" %}" width="50px" height="50px" >
+                <br><h6 class="text-white"><b>Analytics</b></b></h6>
                 <br>
               </div>
             </div>
@@ -88,8 +88,8 @@
             <div class="events-nest ">
               <div class="wrap-no-pad text-white" >
                 <br>
-                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/trigger.png" %}" width="100px" height="100px" >
-                <h4 class="text-white"><b>Triggers</b></h4>
+                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/trigger.png" %}" width="50px" height="50px" >
+                <br><h6 class="text-white"><b>Triggers</b></h6>
                 <br>
               </div>
             </div>
@@ -102,8 +102,8 @@
             <div class="events-nest ">
               <div class="wrap-no-pad text-white" >
                 <br>
-                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/bookmark.png" %}" width="100px" height="100px" >
-                <h4 class="text-white"><b>Bookmarks</b></h4>
+                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/bookmark.png" %}" width="50px" height="50px" >
+                <br><h6 class="text-white"><b>Bookmarks</b></h6>
                 <br>
               </div>
             </div>
@@ -116,8 +116,8 @@
             <div class="events-nest ">
               <div class="wrap-no-pad text-white" >
                 <br>
-                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/download.png" %}" width="100px" height="100px" >
-                <h4 class="text-white"><b>Downloads</b></h4>
+                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/download.png" %}" width="50px" height="50px" >
+                <br><h6 class="text-white"><b>Downloads</b></h6>
                 <br>
               </div>
             </div>
@@ -130,8 +130,8 @@
             <div class="events-nest ">
               <div class="wrap-no-pad text-white">
                 <br>
-                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/links.png" %}" width="100px" height="100px" >
-                <h4 class="text-white"><b>Links</b></h4>
+                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/links.png" %}" width="50px" height="50px" >
+                <br><h6 class="text-white"><b>Links</b></h6>
                 <br>
               </div>
             </div>
