--- a/static/sass/css/theme.css
+++ b/static/sass/css/theme.css
@@ -315,7 +315,7 @@ Master Text Color
   color: #85144b !important; }
 
 .text-white {
-  color: #ffffff !important;
+  color: #3498DB !important;
   text-align: center;
  }
 
