--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,14 @@
   <div class="large-6 columns">
     <div class="row">
       <div class="large-6 columns">
-        <div class="box palette-Red-600 bg">
+        <div class="box palette-White bg">
           <div class="box-body no-pad" style="display: block;">
             <div class="events-nest ">
               <div class="wrap-no-pad text-white" >
                 <br>
-                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/jobs.png" %}" width="50px" height="50px" >
-                <br><h6 class="text-white" ><b>JOBS/STATUS</b></h6>
+                <i class="fa fa-tasks fa-3x" aria-hidden="true"></i>
+                <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/jobs.png" %}" width="50px" height="50px" > -->
+                <br><h6 class="text-white">JOBS/STATUS</h6>
 
               </div>
             </div>
@@ -17,13 +18,14 @@
         </div>
       </div>
       <div class="large-6 columns">
-        <div class="box palette-Cyan-400 bg">
+        <div class="box palette-White bg">
           <div class="box-body no-pad" style="display: block;">
             <div class="events-nest ">
               <div class="wrap-no-pad text-white" >
                 <br>
-                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/nume_ana.png" %}" width="50px" height="50px" >
-                <br><h6 class="text-white"><b>Numerical Analysis</b></h6>
+                <i class="fa fa-pie-chart fa-3x" aria-hidden="true"></i>
+                <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/nume_ana.png" %}" width="50px" height="50px" > -->
+                <br><h6 class="text-white">Numerical Analysis</h6>
 
               </div>
             </div>
@@ -31,13 +33,14 @@
         </div>
       </div>
       <div class="large-6 columns">
-        <div class="box palette-Deep-Purple-A400 bg">
+        <div class="box palette-White bg">
           <div class="box-body no-pad" style="display: block;">
             <div class="events-nest ">
               <div class="wrap-no-pad text-white" >
                 <br>
-                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/vis_ana.png" %}" width="50px" height="50px" >
-                <br><h6 class="text-white"><b>Visual Analysis</b></h6>
+                <i class="fa fa-area-chart fa-3x" aria-hidden="true"></i>
+                <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/vis_ana.png" %}" width="50px" height="50px" > -->
+                <br><h6 class="text-white">Visual Analysis</h6>
 
               </div>
             </div>
@@ -45,13 +48,14 @@
         </div>
       </div>
       <div class="large-6 columns">
-        <div class="box palette-Green-A400 bg">
+        <div class="box palette-White bg">
           <div class="box-body no-pad" style="display: block;">
             <div class="events-nest ">
               <div class="wrap-no-pad text-white" >
                 <br>
-                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/ana.png" %}" width="50px" height="50px" >
-                <br><h6 class="text-white"><b>Analytics</b></b></h6>
+                <i class="fa fa-line-chart fa-3x" aria-hidden="true"></i>
+                <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/ana.png" %}" width="50px" height="50px" > -->
+                <br><h6 class="text-white">Analytics</h6>
 
               </div>
             </div>
@@ -60,8 +64,8 @@
       </div>
 
       <!-- <div class="large-6 columns">
-        <div class="box palette-Cyan-400 bg">
-          <div class="box-header  palette-Cyan-400 bg">
+        <div class="box palette-White bg">
+          <div class="box-header  palette-White bg">
             <div class="pull-right text-white box-tools"> <span class="text-white box-btn"><i class="circle-nest-medium ti-stats-up"></i>
                               </span>&nbsp;&nbsp;&nbsp; </div>
             <h3 class="box-title">
@@ -70,7 +74,7 @@
           <div class="box-body no-pad" style="display: block;">
             <div class="events-nest ">
               <div class="wrap-no-pad text-white">
-                <h1 class="text-white"><b class="counter-up-fast">294</b></h1> <span>Users</span>
+                <h1 class="text-white"><b class="counter-up-fast">294</h1> <span>Users</span>
                 <p>65%</p>
                 <br> </div>
             </div>
@@ -83,13 +87,14 @@
   <div class="large-6 columns">
     <div class="row">
       <div class="large-6 columns">
-        <div class="box palette-Lime-A400 bg">
+        <div class="box palette-White bg">
           <div class="box-body no-pad" style="display: block;">
             <div class="events-nest ">
               <div class="wrap-no-pad text-white" >
                 <br>
-                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/trigger.png" %}" width="50px" height="50px" >
-                <br><h6 class="text-white"><b>Triggers</b></h6>
+                <i class="fa fa-clock-o fa-3x" aria-hidden="true"></i>
+                <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/trigger.png" %}" width="50px" height="50px" > -->
+                <br><h6 class="text-white">Triggers</h6>
 
               </div>
             </div>
@@ -97,13 +102,15 @@
         </div>
       </div>
       <div class="large-6 columns">
-        <div class="box palette-Deep-Orange-A400 bg">
+        <div class="box palette-White bg">
           <div class="box-body no-pad" style="display: block;">
             <div class="events-nest ">
               <div class="wrap-no-pad text-white" >
                 <br>
-                  <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/bookmark.png" %}" width="50px" height="50px" >
-                <br><h6 class="text-white"><b>Bookmarks</b></h6>
+                <i class="fa fa-bookmark fa-3x" aria-hidden="true"></i>
+
+                  <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/bookmark.png" %}" width="50px" height="50px" > -->
+                <br><h6 class="text-white">Bookmarks</h6>
 
               </div>
             </div>
@@ -111,13 +118,14 @@
         </div>
       </div>
       <div class="large-6 columns">
-        <div class="box palette-Yellow-800 bg">
+        <div class="box palette-White bg">
           <div class="box-body no-pad" style="display: block;">
             <div class="events-nest ">
               <div class="wrap-no-pad text-white" >
                 <br>
-                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/download.png" %}" width="50px" height="50px" >
-                <br><h6 class="text-white"><b>Downloads</b></h6>
+                <i class="fa fa-download fa-3x" aria-hidden="true"></i>
+                <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/download.png" %}" width="50px" height="50px" > -->
+                <br><h6 class="text-white">Downloads</h6>
 
               </div>
             </div>
@@ -125,14 +133,15 @@
         </div>
       </div>
       <div class="large-6 columns">
-        <div class="box palette-Deep-Purple bg">
+        <div class="box palette-White bg">
           <div class="box-body no-pad" style="display: block;">
             <div class="events-nest ">
               <div class="wrap-no-pad text-white">
                 <br>
-                <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/links.png" %}" width="50px" height="50px" >
-                <br><h6 class="text-white"><b>Links</b></h6>
-                
+                <i class="fa fa-link fa-3x" aria-hidden="true"></i>
+                <!-- <img alt="" style="margin-left: auto; margin-right: auto; display: block;" src="{% static "img/templates/links.png" %}" width="50px" height="50px" > -->
+                <br><h6 class="text-white">Links</h6>
+
               </div>
             </div>
           </div>
